<resources>
    <string name="app_name">Presión Aguas Riojanas</string>
    <string name="title_activity_punto">Datos del punto</string>
    <string name="title_activity_nuevo_punto">Añadir nuevo punto</string>
    <string name="title_activity_nueva_medicion">Nueva medición</string>
    <string name="title_activity_historial">Historial del punto</string>
    <string name="bAbrirMaps">Abrir Maps</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Inicie sesión</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="action_sync">Sincronizar</string>
    <string name="title_activity_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_out">Cerrar Sesión</string>
    <string name="b_add_punto_presion">Nuevo Punto</string>
    <string name="b_sign_out">Cerrar Sesión</string>
    <string name="b_enviar_nuevo_punto">Guardar Punto</string>
    <string name="b_historial_punto">Ver Historial</string>
    <string name="b_nueva_medicion">Agregar medición</string>
    <string name="cerrar_sesion">¿Esta seguro que desea cerrar sesión?</string>
    <string name="cerrar_sesion_cuerpo">Recuerde que para volver a iniciar sesión debe estar en la misma red del servidor.</string>
    <string name="tv_titulo_dialgo_circuito">Deslice para seleccionar el circuito</string>
    <string name="tv_circuito">Circuito </string>
    <string name="tv_barrio">Barrio </string>
    <string name="tv_tipo_resolucion">Tipo de Resolución</string>
    <string name="tv_observacion">Observación</string>
    <string name="tv_tipo_unidad">Tipo de unidad </string>
    <string name="tv_unidad">Unidad </string>
    <string name="tv_unidad2">Unidad 2 </string>
    <string name="tv_calle1">Calle 1 </string>
    <string name="tv_calle2">Calle 2 </string>
    <string name="tv_presion">Presion </string>
    <string name="b_enviar_medicion">Guardar medición</string>
    <string name="label_cancel">Cancelar</string>
    <string name="action_settings">Configurar y reiniciar app</string>
    <string name="GPSAlertDialogMessage">Ud posee el GPS desactivado, debe activarlo para poder continuar</string>
    <string name="GPSAlertDialogTitle">Error GPS</string>
    <string name="tipo_punto">Punto:</string>
    <string name="tv_confirmar_guardar">¿Confirma que desea guardar?</string>
    <string name="tv_confirmar_resolucion">Elija una opción</string>
    <string name="tv_confirmar_sincronizar">¿Esta seguro de sincronizar?</string>
    <string name="tv_debe_sincronizar">Debe sincronizar para poder cerrar sesión, desea hacerlo ahora?</string>
    <string name="tvUsuario">Bienvenido:</string>
    <string name="bModuloPresion">Presión</string>
    <string name="bModuloInspeccion">Catastro</string>
    <string name="bModuloReclamo">Reclamo</string>
    <string name="tv_presion_historial">Presión:</string>
    <string name="tv_fecha_historial">Fecha:</string>
    <string name="tv_mca">mca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aguas Riojanas</string>
    <string name="nav_header_subtitle">desarrollo@aguasriojanas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="subtitulo_nav_maps">Mapas</string>
    <string name="subtitulo_nav_ayuda">Ayuda</string>
    <string name="tv_sifnificado_rojo">"El punto en rojo significa\nque tiene presión baja.\n(Menor a 8 mca)"</string>
    <string name="tv_significado_verde">"El punto en verde significa\nque tiene presión alta.\n(Mayor a 8 mca)"</string>
    <string name="tv_significado_amarillo">"En amarillo es el punto\nque se debe medir."</string>
    <string name="bNuevaInspeccion">Módulo Inspeccion</string>
    <string name="bSiguienteFragmento">Siguiente</string>
    <string name="bGuardarInspeccion">Guardar</string>
    <string name="bVolver">Volver</string>
    <string name="tv_datos_del_cliente">DATOS DEL CLIENTE</string>
    <string name="hint_razon_social">Razón social</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_barrio">Barrio</string>
    <string name="hint_unidad">Unidad</string>
    <string name="hint_tramite">Trámite</string>
    <string name="hint_serv">Serv</string>
    <string name="hint_nis">Nis</string>
    <string name="hint_medidor_de_agua">Medidor de agua</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_medidor_de_luz">Medidor de Luz</string>
    <string name="hint_reclama">Reclama</string>
    <string name="tv_caracteristicas_del_inmueble">CARACTERÍSTICAS DEL INMUEBLE</string>
    <string name="tv_nueva_resolucion">Nueva Resolución</string>
    <string name="tv_tipo_de_inmueble">Tipo de Inmueble</string>
    <string name="tv_destino">Destino</string>
    <string name="tv_coeficiente_zonal">Coeficiente zonal</string>
    <string name="tv_tipo_de_servicio">Tipo de servicio</string>
    <string name="b_agregar">Agregar</string>
    <string name="tv_datos_relevados">DATOS RELEVADOS</string>
    <string name="cb_control_de_calidad">Control de calidad</string>
    <string name="tv_control_de_calidad">Control de calidad</string>
    <string name="hint_cloro">Cloro</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="cb_muestra_turbidez">Muestra de turbidez</string>
    <string name="et_muestra">Número de Muestra</string>
    <string name="button_listo_guardar">Listo, Guardar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="tv_geolocalizacion">GEOLOCALIZACION</string>
    <string name="tv_observaciones">OBSERVACIONES</string>
    <string name="tv_foto">FOTO</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Intro</string>
    <string name="b_nuevo_relevamiento">Módulo Relevamiento</string>
    <string name="tv_rubro">Rubro</string>
    <string name="tv_medidores">MEDIDORES</string>
    <string name="sw_conexion_visible">Conexión Visible</string>
    <string name="tv_error">ERROR</string>
    <string name="tv_progress_bar">SINCRONIZANDO</string>
    <string name="title_activity_tramites">Tramites</string>
    <string name="title_activity_reclamo">Reclamo</string>
    <string name="title_activity_ubicacion_reclamo">Ubicación de la unidad</string>
    <string name="title_activity_resoluciones">Resoluciones</string>
    <string name="title_activity_nueva_resolucion">Nueva Resolución</string>
    <string name="b_ver_en_el_mapa">Ver en el mapa</string>
    <string name="b_resolver">Resolver</string>
    <string name="b_enviar_resolucion">Enviar Resolución</string>
    <string name="b_abrir_resolucion">Abrir Resolución</string>
    <string name="b_guardar_resolucion">Guardar Resolución</string>
    <string name="b_cerrar_resolucion">Cerrar Resolución</string>
    <string name="switch_actualizar_ubicacion">Actualizar ubicación</string>
    <string name="title_activity_relevamientos">Relevamientos</string>
</resources>
