<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fInspeccion"
    style="@style/layout_primary"
    tools:context=".ui.inspeccion.nuevorelevamientofragments.FormInmueble">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <TextView
            android:id="@+id/tvDatosInmueble"
            style="@style/tv_primary_bold_center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_caracteristicas_del_inmueble" />

        <TextView
            android:id="@+id/tvsBarios"
            style="@style/tv_primary_mini"
            android:layout_below="@id/tvDatosInmueble"
            android:layout_marginTop="5dp"
            android:text="@string/tv_barrio" />

        <Spinner
            android:id="@+id/sBarrio"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/tvsBarios"
            android:layout_alignStart="@+id/tvDatosInmueble"
            android:layout_alignEnd="@id/tvDatosInmueble"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <TextView
            android:id="@+id/tvsTipoInmueble"
            style="@style/tv_primary_mini"
            android:layout_below="@+id/sBarrio"
            android:layout_marginTop="5dp"
            android:text="@string/tv_tipo_de_inmueble" />

        <Spinner
            android:id="@+id/sTipoInmueble"
            style="@style/et_primary"
            android:layout_height="40dp"
            android:layout_below="@+id/tvsTipoInmueble"
            android:layout_alignStart="@+id/tvDatosInmueble"
            android:layout_alignEnd="@id/tvDatosInmueble"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <TextView
            android:id="@+id/tvsDestino"
            style="@style/tv_primary_mini"
            android:layout_below="@id/sTipoInmueble"
            android:layout_marginTop="5dp"
            android:text="@string/tv_destino" />

        <Spinner
            android:id="@+id/sDestino"
            style="@style/et_primary"
            android:layout_height="40dp"
            android:layout_below="@+id/tvsDestino"
            android:layout_alignStart="@+id/tvDatosInmueble"
            android:layout_alignEnd="@id/tvDatosInmueble"
            android:layout_marginTop="0dp"
            android:background="@drawable/sp_redondo" />

        <Switch
            android:id="@+id/swConexionVisible"
            style="@style/tv_primary_left"
            android:layout_below="@id/sDestino"
            android:layout_alignStart="@+id/tvDatosInmueble"
            android:background="@drawable/et_redondo_without_padding"
            android:text="Conexion Visible" />

        <EditText
            android:id="@+id/etMedidorLuz"
            style="@style/et_primary"
            android:layout_below="@id/swConexionVisible"
            android:hint="@string/hint_medidor_de_luz" />

        <EditText
            android:id="@+id/etMedidorAgua"
            style="@style/et_primary"
            android:layout_below="@id/etMedidorLuz"
            android:hint="@string/hint_medidor_de_agua" />

        <EditText
            android:id="@+id/etObservaciones"
            style="@style/et_primary"
            android:layout_below="@id/etMedidorAgua"
            android:hint="@string/hint_observaciones"
            android:inputType="textMultiLine" />

    </RelativeLayout>

</ScrollView>