<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_primary"
    tools:context=".ui.reclamo.NuevaResolucionActivity">

    <TextView
        android:id="@+id/tvNuevaResolucion"
        style="@style/tv_primary_bold_center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvsTipoResolucion"
        style="@style/tv_primary_mini"
        android:layout_below="@+id/tvNuevaResolucion"
        android:layout_alignStart="@+id/tvNuevaResolucion"
        android:layout_alignEnd="@id/tvNuevaResolucion"
        android:layout_marginTop="-10dp"
        android:text="@string/tv_tipo_resolucion" />

    <Spinner
        android:id="@+id/sTipoResolucion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tvsTipoResolucion"
        android:layout_alignStart="@+id/tvNuevaResolucion"
        android:layout_alignEnd="@id/tvNuevaResolucion"
        android:layout_marginTop="0dp"
        android:background="@drawable/sp_redondo" />

    <TextView
        android:id="@+id/tvObservacion"
        style="@style/tv_primary_mini"
        android:layout_below="@+id/sTipoResolucion"
        android:layout_alignStart="@+id/tvNuevaResolucion"
        android:layout_alignEnd="@id/tvNuevaResolucion"
        android:layout_marginTop="15dp"
        android:text="@string/tv_observacion" />

    <EditText
        android:id="@+id/etObservaciones"
        style="@style/et_primary"
        android:layout_below="@+id/tvObservacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:hint="@string/hint_observaciones"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bEnviarResolucion"
        style="@style/b_primary"
        android:layout_below="@+id/etObservaciones"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/b_enviar_resolucion" />


</RelativeLayout>