<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_primary"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etMail"
                style="@style/et_primary"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etClave"
                style="@style/et_primary"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/bLogin"
                style="@style/b_primary"
                android:layout_width="match_parent"
                android:text="@string/action_sign_in" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>