<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_primary"
    android:id="@+id/LLRelevamiento"
    tools:context=".ui.inspeccion.RelevamientoActivity">

    <Button
        android:id="@+id/bSiguienteFragmento"
        style="@style/b_primary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="5"
        android:text="@string/bSiguienteFragmento"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bGuardarRelevamiento"
        style="@style/b_primary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:ems="5"
        android:text="@string/bGuardarInspeccion"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bVolver"
        style="@style/b_primary"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:ems="5"
        android:text="@string/bVolver"
        android:visibility="invisible" />

</RelativeLayout>